[package]
name = "spotify-playlist-importer"
version = "0.1.0"
authors = ["Daniel Faust <hessijames@gmail.com>"]
description = "Import playlists into Spotify accurately and with ease"
repository = "https://github.com/dfaust/spotify-playlist-importer"
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
# less code to include into binary
panic = "abort"
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggresive )
opt-level = "z"
# link time optimization using using whole-program analysis
lto = true

[dependencies]
log = "0.4"
strum = "0.18"
strum_macros = "0.18"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde-xml-rs = "0.4.0"
wasm-bindgen = "0.2.58"
web-sys = { version = "0.3.40", features = ["KeyboardEvent", "Performance"] }
js-sys = "0.3.40"
wasm-logger = "0.2"
wee_alloc = { version = "0.4.4", optional = true }
yew = "0.17.2"
yew-router = "0.14.0"
http = "*"
anyhow = "1.0.31"
percent-encoding = "2.1.0"
if_chain = "1.0.0"
strsim = "0.10.0"
dotenv_codegen = "0.15.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"
